Fixed issue with mobile browser bottom nav covering modals, changed WIM logo, added readme badge

--- a/src/styles/less/main.less
+++ b/src/styles/less/main.less
@@ -14,7 +14,8 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
-    background-color:#474747;
+	background-color:#474747;
+	height: 100%;
 
     padding-top: 95px;
 
